--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
+        {% if "success" in error %}
+        <div class="alert alert-success" role="alert">
+            {{ error }}
+        </div>
+        {% elif error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Search</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,11 +22,11 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                {% if type == "influencers" %}
+                {% if type == "Sponsor" %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('sponsor_dashboard') }}">Home</a>
                     </li>
-                {% elif type == "campaigns" %}
+                {% elif type == "Influencer" %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('influencer_dashboard') }}">Home</a>
                     </li>
@@ -26,16 +35,75 @@
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
               </ul>
-              <form class="d-flex">
+              <form class="d-flex" method="POST">
                 <input type="hidden" name="form_id" value="search_name">
-                <input type="hidden" name="type" value="{{ type }}">
                 <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search">
+                <select class="form-select" name="sort" id="sort" aria-label="Default select example">
+                    <option value="{{ None }}" select>None</option>
+                    <option value="High">Ascending</option>
+                    <option value="Low">Descending</option>
+                </select>
+                {% if type == "Sponsor" %}
+                <label class="form-label" for="Search_Type">Sort By Reach</label>
+                <select id="category" name="category" class="form-control" multiple>
+                    <option value="{{ None }}" disable select>Filter by Categories</option>
+                    <option value="beauty">Beauty</option>
+                    <option value="fashion">Fashion</option>
+                    <option value="fitness">Fitness</option>
+                    <option value="health">Health</option>
+                    <option value="travel">Travel</option>
+                    <option value="food">Food</option>
+                    <option value="lifestyle">Lifestyle</option>
+                    <option value="gaming">Gaming</option>
+                    <option value="technology">Technology</option>
+                    <option value="photography">Photography</option>
+                    <option value="music">Music</option>
+                    <option value="parenting">Parenting</option>
+                    <option value="finance">Finance</option>
+                    <option value="education">Education</option>
+                    <option value="sports">Sports</option>
+                    <option value="art">Art</option>
+                    <option value="home-decor">Home Decor</option>
+                    <option value="pets">Pets</option>
+                    <option value="automotive">Automotive</option>
+                    <option value="books">Books</option>
+                    <option value="diy">DIY</option>
+                    <option value="environment">Environment</option>
+                    <option value="entertainment">Entertainment</option>
+                    <option value="business">Business</option>
+                    <option value="spirituality">Spirituality</option>
+                    <option value="dating">Dating</option>
+                    <option value="career">Career</option>
+                    <option value="event-planning">Event Planning</option>
+                    <option value="gaming-cosplay">Gaming Cosplay</option>
+                    <option value="luxury">Luxury</option>
+                    <option value="outdoors">Outdoors</option>
+                    <option value="wellness">Wellness</option>
+                    <option value="mental-health">Mental Health</option>
+                    <option value="non-profit">Non-Profit</option>
+                    <option value="comedy">Comedy</option>
+                    <option value="news">News</option>
+                    <option value="personal-development">Personal Development</option>
+                    <option value="relationship">Relationship</option>
+                    <option value="social-justice">Social Justice</option>
+                    <option value="sustainable-living">Sustainable Living</option>
+                    <option value="tech-gadgets">Tech Gadgets</option>
+                    <option value="videography">Videography</option>
+                    <option value="yoga">Yoga</option>
+                    <option value="crypto">Crypto</option>
+                    <option value="investment">Investment</option>
+                    <option value="real-estate">Real Estate</option>
+                </select>
+                <label class="form-label" for="category">Category</label>
+                {% elif type == "Influencer" %}
+                <label class="form-label" for="Search_Type">Sort By Budget</label>
+                {% endif %}
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
             </div>
         </nav>
 
-        {% if type == "influencers" %}
+        {% if type == "Sponsor" %}
             {% for influencer in results %}
             <div class="card">
                 <div class="card-header">
@@ -83,54 +151,27 @@
                 </div>
             </div>
             {% endfor %}
-        {% elif type == "campaigns" %}
+        {% elif type == "Influencer" %}
             {% for campaign in results %}
-            <div class="card">
-                <div class="card-header">
-                    {{ campaign.name }}
-                </div>
-                <div class="card-body">
-                    <p class="card-text">{{ campaign.description }}</p>
-                    <p class="card-text">{{ campaign.goals }}</p>
-                    <p class="card-text">{{ campaign.budget }}</p>
-                    <p class="card-text">{{ campaign.start_date }}</p>
-                    <p class="card-text">{{ campaign.end_date }}</p>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{ campaign.progress }}%;" aria-valuenow="{{ campaign.progress }}" aria-valuemin="0" aria-valuemax="100">{{ campaign.progress }}%</div>
+            <br>
+            <a href="{{ url_for('campaign', id=campaign.id) }}", style="text-decoration:none;">
+                <div class="card">
+                    <div class="card-header">
+                        {{ campaign.name }}
                     </div>
-                    {% if campaign.progress < 100 %}
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestAd{{ campaign.id }}">
-                            Request
-                        </button>
-                    {% endif %}
-                    <!-- Send Ad Request Modal -->
-                    <div class="modal fade" id="requestAd{{ campaign.id }}" tabindex="-1" role="dialog" aria-labelledby="requestAd" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <form method="POST" id="request_ad">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="requestAd">Send an Ad Request</h5>
-                                    </div>
-                                    <div class="modal-body">
-                                        <input type="hidden" name="form_id" value="ad_request">
-                                        <input type="hidden" name="id" value="{{ id }}">
-                                        <input type="text" name="message" id="Messages" class="form-control" required/>
-                                        <label class="form-label" for="Messages">Messages</label>
-                                        <input type="text" name="requirement" id="Requirements" class="form-control" required/>
-                                        <label class="form-label" for="Requirements">Requirements</label>
-                                        <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required/>
-                                        <label class="form-label" for="Payment_Amount">Payment Amount</label>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" name="status" class="btn btn-primary">Request</button>
-                                    </div>
-                                </form>
-                            </div>
+                    <div class="card-body">
+                        <p class="card-text">{{ campaign.description }}</p>
+                        <p class="card-text">{{ campaign.goals }}</p>
+                        <p class="card-text">{{ campaign.budget }}</p>
+                        <p class="card-text">{{ campaign.start_date }}</p>
+                        <p class="card-text">{{ campaign.end_date }}</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: {{ (campaign.budget - campaign.remaining)/campaign.budget }}%;" 
+                            aria-valuenow="{{ (campaign.budget - campaign.remaining)/campaign.budget }}" aria-valuemin="0" aria-valuemax="100">{{ (campaign.budget - campaign.remaining)/campaign.budget }}%</div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
             {% endfor %}
         {% endif %}
 
