--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -5,6 +5,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
+        {% if "success" in error %}
+        <div class="alert alert-success" role="alert">
+            {{ error }}
+        </div>
+        {% elif error %}
+        <div class="alert alert-danger" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Welcome {{ sponsor.name }}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#Profile">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Campaigns</a>
+                  <a class="nav-link" href="#Campaigns">Campaigns</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Stats</a>
+                    <a class="nav-link" href="#Ad_Requests">Ad Requests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('search', type='influencer') }}">Find</a>
+                    <a class="nav-link" href="{{ url_for('search') }}">Find Influencers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
@@ -54,19 +63,63 @@
                             <input type="hidden" name="form_id" value="edit_profile">
                             <!-- Name input -->
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" name="name" id="Full_Name" value="{{ sponsor.name }}" class="form-control" required maxlength="45" pattern="^[a-zA-Z]+"/>
+                                <input type="text" name="name" id="Full_Name" value="{{ sponsor.name }}" class="form-control" maxlength="45" pattern="^[\w\-\s]+$"/>
                                 <label class="form-label" for="Full_Name">Full Name</label>
                             </div>
 
                             <!-- Industry input -->
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="Industry" name="industry" value="{{ sponsor.industry }}" class="form-control" required maxlength="45" pattern="^[a-zA-Z]+"/>
+                                <select id="Industry" name="industry" class="form-control" value="{{ sponsor.industry }}">
+                                    <option value="technology">Technology</option>
+                                    <option value="finance">Finance</option>
+                                    <option value="healthcare">Healthcare</option>
+                                    <option value="education">Education</option>
+                                    <option value="manufacturing">Manufacturing</option>
+                                    <option value="retail">Retail</option>
+                                    <option value="real-estate">Real Estate</option>
+                                    <option value="entertainment">Entertainment</option>
+                                    <option value="transportation">Transportation</option>
+                                    <option value="agriculture">Agriculture</option>
+                                    <option value="automotive">Automotive</option>
+                                    <option value="construction">Construction</option>
+                                    <option value="energy">Energy</option>
+                                    <option value="food-and-beverage">Food and Beverage</option>
+                                    <option value="hospitality">Hospitality</option>
+                                    <option value="insurance">Insurance</option>
+                                    <option value="media">Media</option>
+                                    <option value="pharmaceuticals">Pharmaceuticals</option>
+                                    <option value="professional-services">Professional Services</option>
+                                    <option value="public-sector">Public Sector</option>
+                                    <option value="telecommunications">Telecommunications</option>
+                                    <option value="utilities">Utilities</option>
+                                    <option value="logistics">Logistics</option>
+                                    <option value="mining">Mining</option>
+                                    <option value="non-profit">Non-Profit</option>
+                                    <option value="aerospace">Aerospace</option>
+                                    <option value="biotechnology">Biotechnology</option>
+                                    <option value="chemicals">Chemicals</option>
+                                    <option value="consulting">Consulting</option>
+                                    <option value="defense">Defense</option>
+                                    <option value="fashion">Fashion</option>
+                                    <option value="furniture">Furniture</option>
+                                    <option value="human-resources">Human Resources</option>
+                                    <option value="legal">Legal</option>
+                                    <option value="luxury-goods">Luxury Goods</option>
+                                    <option value="packaging">Packaging</option>
+                                    <option value="publishing">Publishing</option>
+                                    <option value="recreation">Recreation</option>
+                                    <option value="security">Security</option>
+                                    <option value="sports">Sports</option>
+                                    <option value="tourism">Tourism</option>
+                                    <option value="waste-management">Waste Management</option>
+                                    <option value="wholesale">Wholesale</option>
+                                </select>
                                 <label class="form-label" for="Industry">Industry</label>
                             </div>
                         
                             <!-- Password input -->
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="password" id="Pass" name="pass" class="form-control" required minlength="8" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{8,}$"/>
+                                <input type="password" id="Pass" name="pass" class="form-control" minlength="8" pattern="^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{8,}$"/>
                                 <label class="form-label" for="Pass">Change Password</label>
                             </div>
                         </div>
@@ -82,7 +135,7 @@
 
         <!-- Campaigns Page -->
         <div id="Campaigns">
-            <h1>Published Campaigns</h1>
+            <h2>Published Campaigns</h2>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCampaign">
                 Add Campaign
             </button>
@@ -122,7 +175,10 @@
 
                             <!-- Visibility input -->
                             <div data-mdb-input-init class="form-outline mb-4">
-                                <input type="text" id="Visibility" name="visibility" class="form-control" required/>
+                                <select id="Visibility" name="visibility" class="form-control" required>
+                                    <option value="Public">Public</option>
+                                    <option value="Private">Private</option>
+                                </select>
                                 <label class="form-label" for="visibility">Visibility</label>
                             </div>
 
@@ -146,36 +202,39 @@
                     </form>
                 </div>
                 </div>
-            </div>
+            </div><br>
             {% if campaigns | length == 0 %}
                 <p>No campaigns published yet.</p>
             {% endif %}
             {% for campaign in campaigns %}
                 <br>
-                <div class="card">
-                    <div class="card-header">
-                        {{ campaign.name }}
+                <a href="{{ url_for('campaign', id=campaign.id) }}", style="color: black;text-decoration: none;">
+                    <div class="card">
+                        <div class="card-header">
+                            {{ campaign.name }}
+                        </div>
+                        <div class="card-body">
+                        <p class="card-text">Description: {{ campaign.description }}</p>
+                        <p class="card-text">Goals: {{ campaign.goals }}</p>
+                        <p class="card-text">Visibility: {{ campaign.visibility }}</p>
+                        <p class="card-text">Budget: {{ campaign.budget }}</p>
+                        <p class="card-text">Active from {{ campaign.start_date }} to {{ campaign.end_date }}</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: {{ (campaign.budget - campaign.remaining)/campaign.budget }}%;" 
+                            aria-valuenow="{{ (campaign.budget - campaign.remaining)/campaign.budget }}" aria-valuemin="0" aria-valuemax="100">{{ (campaign.budget - campaign.remaining)/campaign.budget }}%</div>
+                        </div>
+                    </a>
+                        <br>
+                        <!-- Edit Campaign Button -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editCampaign{{ campaign.id }}">
+                            Edit Campaign
+                        </button>
+                        <!-- Delete Campaign Button -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteCampaign{{ campaign.id }}">
+                            Delete Campaign
+                        </button>
+                        </div>
                     </div>
-                    <div class="card-body">
-                    <p class="card-text">Description: {{ campaign.description }}</p>
-                    <p class="card-text">Goals: {{ campaign.goals }}</p>
-                    <p class="card-text">Visibility: {{ campaign.visibility }}</p>
-                    <p class="card-text">Budget: {{ campaign.budget }}</p>
-                    <p class="card-text">Active from {{ campaign.start_date }} to {{ campaign.end_date }}</p>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{ campaign.progress }}%;" aria-valuenow="{{ campaign.progress }}" aria-valuemin="0" aria-valuemax="100">{{ campaign.progress }}%</div>
-                    </div>
-                    <br>
-                    <!-- Edit Campaign Button -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editCampaign{{ campaign.id }}">
-                        Edit Campaign
-                    </button>
-                    <!-- Delete Campaign Button -->
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteCampaign{{ campaign.id }}">
-                        Delete Campaign
-                    </button>
-                    </div>
-                </div>
                 <!-- Edit Campaign Modal -->
                 <div class="modal fade" id="editCampaign{{ campaign.id }}" tabindex="-1" role="dialog" aria-labelledby="editCampaignLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -213,7 +272,10 @@
 
                                 <!-- Visibility input -->
                                 <div data-mdb-input-init class="form-outline mb-4">
-                                    <input type="text" id="Visibility" name="visibility" value="{{ campaign.visibility }}" class="form-control" required/>
+                                    <select id="Visibility" name="visibility" class="form-control" required>
+                                        <option value="Public">Public</option>
+                                        <option value="Private">Private</option>
+                                    </select>
                                     <label class="form-label" for="visibility">Visibility</label>
                                 </div>
 
@@ -242,6 +304,9 @@
                 <div class="modal fade" id="deleteCampaign{{ campaign.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteCampaignLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
+                        <div class="alert alert-warning" role="alert">
+                            This action will delete the campaign and all associated ad requests.
+                        </div>
                         <form method="POST" id="delete_campaign">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="deleteCampaignLabel">Delete Campaign</h5>
@@ -263,8 +328,8 @@
         </div>
 
         <!-- Ad Requests Page -->
-        <div id="Ad_Request">
-            <h1>Ad Requests</h1>
+        <div id="Ad_Requests">
+            <h2>Ad Requests</h2>
             {% if ad_requests | length == 0 %}
                 <p>No Ad Requests sent yet.</p>
             {% endif %}
@@ -310,12 +375,48 @@
                             </div>
                             </div>
                         </div>
-                    {% elif not ad_request.negotiate %}
+                    {% elif not ad_request.negotiate and ad_request.status == "Pending" %}
                         <p>Status: {{ ad_request.status }}</p>
+                        <!-- Edit Ad Request Button -->
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editAd{{ ad_request.id }}">
+                            Edit
+                        </button>
                         <!-- Withdraw Ad Request Button -->
                         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#withdrawAd{{ ad_request.id }}">
                             Withdraw
                         </button>
+                        <!-- Edit Ad Request Modal -->
+                        <div class="modal fade" id="editAd{{ ad_request.id }}" tabindex="-1" role="dialog" aria-labelledby="editAd" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <form method="POST" id="edit_ad">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="editAd">Editting Ad Request</h5>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input type="hidden" name="form_id" value="edit_ad">
+                                        <input type="hidden" name="id" value="{{ ad_request.id }}">
+                                        <label class="form-label">Ad Request for Campaign {{ ad_request.name }}</label>
+
+                                        <input type="text" name="message" id="Messages" class="form-control" value="{{ ad_request.messages }}" required/>
+                                        <label class="form-label" for="Messages">Messages</label>
+
+                                        <input type="text" name="requirement" id="Requirements" class="form-control" value="{{ ad_request.requirements }}" required/>
+                                        <label class="form-label" for="Requirements">Requirements</label>
+
+                                        <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" value="{{ ad_request.payment_amount }}" required/>
+                                        <label class="form-label" for="Payment_Amount">Payment Amount</label>
+
+                                        <label class="form-label">Influencer Assigned: {{ ad_request.influencer_name }}</label>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                                    </div>
+                                </form>
+                            </div>
+                            </div>
+                        </div>
                         <!-- Withdraw Ad Request Modal -->
                         <div class="modal fade" id="withdrawAd{{ ad_request.id }}" tabindex="-1" role="dialog" aria-labelledby="withdrawAd" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -343,7 +444,7 @@
                             </div>
                         </div>
                     {% else %}
-                        <p>Status: {{ ad_request.status }}</p>
+                        <p>Status: {{ ad_request.status }}ed</p>
                     {% endif %}
                     </div>
                 </div>
